# lofi

./: .eslintrc  .gitignore  .tool-versions  binding.macos.gyp  electron-esbuild.config.yaml  entitlements.mac.plist  esbuild.main.config.js  esbuild.renderer.config.js  osx.txt  package-lock.json  package.json
mac-virtualcam/: .gitignore
mac-virtualcam/src/common/: MachProtocol.h
mac-virtualcam/src/dal-plugin/: CMakeLists.txt  Info.plist  LOFIDALDevice.h  LOFIDALDevice.mm  LOFIDALMachClient.h  LOFIDALMachClient.mm  LOFIDALObjectStore.mm  LOFIDALPlugIn.h  LOFIDALPlugIn.mm  LOFIDALPlugInInterface.mm  LOFIDALPlugInMain.mm  LOFIDALStream.h  LOFIDALStream.mm  OBSDALDevice.mm  OBSDALObjectStore.mm  OBSDALPlugIn.h  OBSDALPlugIn.mm  OBSDALStream.mm
plugins/mac/lofi-cam/: CMakeLists.txt
plugins/mac/lofi-cam/src/dal-plugin/: CMSampleBufferUtils.mm  CMakeLists.txt  Info.plist  LOFIDALDevice.mm  LOFIDALObjectStore.h  LOFIDALPlugIn.mm  LOFIDALPlugInInterface.h  LOFIDALPlugInInterface.mm  LOFIDALStream.mm  Logging.h
scripts/: notarize.js
src/addon/macos/: Server.h  Server.mm  main.mm
src/addon/macos/macos.xcodeproj/: project.pbxproj
src/addon/macos/macos.xcodeproj/xcuserdata/gfodor.xcuserdatad/xcschemes/: addon.xcscheme  xcschememanagement.plist
src/main/: main.js  preload.js
src/renderer/: App.js  audio-forward-worklet.js  avatar-swatch.js  index.css  index.html  index.js  lip-sync.worker.js  rnnoise-vad-wasm.js  vad-noise-worklet.js
